use the queries dir

--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -2,7 +2,7 @@ version: "2"
 sql:
   - engine: "postgresql"
     schema: "./migrations"
-    queries: "./query.sql"
+    queries: "./query"
     gen:
       go:
         emit_json_tags: true
